--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Prácticas Asignatura Programación de Dispositivos Móviles</h1>
+<ul>
+<li><a href="https://thedani1.github.io/flipstudy/">Documentación Flip&Study App</a></li>
+<li><a href="https://thedani1.github.io/flipstudywearos/">Documentación Flip&Study WearOS App</a></li>
+<li><a href="https://thedani1.github.io/nonotes/">Documentación NoNotes App</a></li>
+</ul>
+</body>
+</html>
